--- a/003.html
+++ b/003.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广西壮族自治区</span>:兄弟二手货车--G242--久隆收费站--S43宾钦高速--S50清凭高速--G59呼北高速--S5923松铁高速--G75兰海高速--粤桂界；<br><hr><span id="pro">广东省</span>:粤桂界--G75兰海高速--山口收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广西壮族自治区</span>:兄弟二手货车--G242--金桔收费站--S43宾钦高速--S50清凭高速--G59呼北高速--S5923松铁高速--G75兰海高速--粤桂界；<br><hr><span id="pro">广东省</span>:粤桂界--G75兰海高速--山口收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -95,7 +95,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">挖机</div></li>
+                    <div class="detail-value " id="cargoInfo">工程机械</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">48.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
