--- a/002.html
+++ b/002.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>: 汕头市亿力机械设备有限公司--G260--鮀莲收费站收费站--S85潮汕高速--G78汕昆高速--G15沈海高速--粤闽界；<br><hr><span id="pro">福建省</span>:闽粤界--G15沈海高速--古雷港东收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>: 汕头市亿力机械设备有限公司--G324--潮阳西收费站--S85潮汕环线高速--G78汕昆高速--G15沈海高速--粤闽界；<br><hr><span id="pro">福建省</span>:闽粤界--G15沈海高速--古雷港东收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
