--- a/002.html
+++ b/002.html
@@ -79,11 +79,11 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
 				<div class="detail-value " id="passDists">广东省，湖南省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2023年12月04日14时22分至 2023年12月15日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2023年12月04日19时22分至 2023年12月15日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>: 华科达机械--G359--更河西收费站--S5广台高速--谭塱立交--G94珠三角环线高速--张洞立交--G55二广高速--粤湘界；<br><hr><span id="pro">湖南省</span>:湘粤界--G55二广高速--宁远东收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>: 华科达机械--G359--更合西收费站--S5广台高速--谭塱立交--G94珠三角环线高速--张洞立交--G55二广高速--粤湘界；<br><hr><span id="pro">湖南省</span>:湘粤界--G55二广高速--宁远东收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
