--- a/002.html
+++ b/002.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>: 锦绣江南--石排大道--石崇大道--石排收费站--S29从莞深高速--卫东立交--G45大广高速--石岭立交--S14汕湛高速--升平立交--G4京港澳高速--粤湘界<br><hr><span id="pro">湖南省</span>:湘粤界--G4京港澳高速--宜章收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>: 北汽（广州）汽车有限公司--G324--福田收费站--S29从莞深高速--卫东立交--G45大广高速--石岭立交--S14汕湛高速--升平立交--G4京港澳高速--粤湘界<br><hr><span id="pro">湖南省</span>:湘粤界--G4京港澳高速--宜章收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
