--- a/006.html
+++ b/006.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:顺江公园--G105--佛陈路--陈村大道--三龙湾大道--三龙湾收费站--S43广珠西线高速--S47广佛高速--G0421许广高速—粤湘界；<br><hr><span id="pro">湖南省</span>:湘粤界-- G0421许广高速--迎春收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:顺江公园--G105--佛陈路--陈村大道--三龙湾大道--三龙湾收费站--S43广珠西线高速--S47广佛高速--G0421许广高速--粤湘界；<br><hr><span id="pro">湖南省</span>:湘粤界--G0421许广高速--迎春收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
