--- a/002.html
+++ b/002.html
@@ -77,13 +77,13 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
                     <div class="detail-value " id="reqNo">A4400002023120804769</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">广东省，福建省</div></li>
+				<div class="detail-value " id="passDists">广东省，广西壮族自治区</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
                     <div class="detail-value " id="passDate">2023年12月11日19时59分至 2023年12月20日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>: 大围村--G228--G324--潮阳西收费站--S85潮汕环线高速--溪头立交--G78汕昆高速--埔上立交--G1523甬莞高速--粤闽界<br><hr><span id="pro">福建省</span>:闽粤界--G1523甬莞高速--平和收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>: 大围村--G228--G324--环城东路--普宁大道--G324--葵潭收费站--S17揭普惠高速--G15沈海高速--S6广惠高速--G1523甬莞高速--G35济广高速--G15沈海高速--G75兰海高速--粤桂界<br><hr><span id="pro">广西壮族自治区</span>:桂粤界--G75兰海高速--山口收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
