--- a/005.html
+++ b/005.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:顺和建材--G228--S541--平冈收费站--S51肇阳高速--S14汕湛高速--S51肇阳高速--莫村立交--G2518深岑高速--粤桂界<br><hr><span id="pro">广西壮族自治区</span>: 桂粤界--G2518深岑高速--G65包茂高速--G80广昆高速--S1701玉林绕城高速--G80广昆高速--玉林收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:开平农机市场--G325--开平大道--开平收费站--G15沈海高速--平连立交--G2518深岑高速--粤桂界<br><hr><span id="pro">广西壮族自治区</span>: 桂粤界--G2518深岑高速--归义收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
