--- a/001.html
+++ b/001.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:美满工业园--S366--鹤洲北收费站--S47广佛江珠高速--昭兴围立交--S34香海高速--坦洲立交--G0425广澳高速--G4京港澳高速--长平立交--S45从埔高速--G45大广高速--粤赣界<br><hr><span id="pro">江西省</span>:赣粤界--G45大广高速--全南收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:美满工业园--S366--鹤洲北收费站--S47广佛江珠高速--昭兴围立交--S34香海高速--坦洲立交--G0425广澳高速--G4京港澳高速--长平立交--S45从埔高速--中和里立交--G45大广高速--粤赣界<br><hr><span id="pro">江西省</span>:赣粤界--G45大广高速--全南收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
