--- a/005.html
+++ b/005.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:明顺建材--S387--大亚湾收费站--S30惠深沿海高速--G15沈海高速--S17潮惠高速--G1523甬莞高速--粤闽界<br><hr><span id="pro">福建省</span>: 闽粤界--G1523甬莞高速--平和三平收费站--G355--兄弟二手车<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:明顺建材--S387--疏港大道--惠澳大道--G228--S356--环城南路--G228--G324--S337--G228--惠来收费站--G15沈海高速--粤闽界<br><hr><span id="pro">福建省</span>: 闽粤界--G15沈海高速--古雷港收费站--X511--古雷港石化基地<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
