--- a/002.html
+++ b/002.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>: 千禧大厦--布龙路--龙景收费站--G75兰海高速--龙井立交--S29清平高速--G15沈海高速--G0422武深高速--G45大广高速--粤赣界<br><hr><span id="pro">江西省</span>:赣粤界--G45大广高速--全南收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>: 深圳市口岸指挥中心大厦--福田南路--百合三路--皇岗路--滨河大道--船步路--沿河南路--S203丹平快速路--龙岗大道--南坪东大道--S301南坪快速--净水路--上洋路--龙海三路--龙山四路--石化大道西--龙山五路--白云二路--淡水东收费站--淡水东立交--S23惠大高速--龙井立交--S27韶惠高速--G0422武深高速--G45大广高速--粤赣界<br><hr><span id="pro">江西省</span>:赣粤界--G45大广高速--全南收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
