--- a/019.html
+++ b/019.html
@@ -79,11 +79,11 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
 				<div class="detail-value " id="passDists">山西省，陕西省，四川省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年01月25日10时10分至 2024年01月30日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年01月25日17时10分至 2024年01月30日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">山西省</span>: 董家营村--西大街--滨榆线--二浙线--X241--012乡道--二淅线--乔家大院景区收费站--S2002太原二环高速--G5京昆高速--晋陕界<br><hr><span id="pro">陕西省</span>: 陕晋界--G5京昆高速--G3002西安绕城高速--G5京昆高速--陕川界<br><hr><span id="pro">四川省</span>: 川陕界--G5京昆高速--德阳收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">山西省</span>: 董家营村--G208--乔家大院景区收费站--S2002太原二环高速--G5京昆高速--晋陕界<br><hr><span id="pro">陕西省</span>: 陕晋界--G5京昆高速--G3002西安绕城高速--G5京昆高速--陕川界<br><hr><span id="pro">四川省</span>: 川陕界--G5京昆高速--德阳收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
