--- a/011.html
+++ b/011.html
@@ -79,11 +79,11 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
 				<div class="detail-value " id="passDists">广东省，广西壮族自治区</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年02月18日13时30分至 2024年02月29日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年02月18日17时15分至 2024年02月29日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:  中国石化金新境加油站--桂丹西路--G359--G324--高明大道—合和大道--更合西收费站--S5广台高速--罗汉山立交--S26中阳高速--S14汕湛高速--樟檬立交--S42化廉高速--洋官塘立交--G75兰海高速--粤桂界<br><hr><span id="pro">广西壮族自治区</span>:桂粤界--G75兰海高速--山口收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:  绿色德公司--高明大道—S272—明城收费站--S5广台高速--罗汉山立交--S26中阳高速--S14汕湛高速--樟檬立交--S42化廉高速--洋官塘立交--G75兰海高速--粤桂界<br><hr><span id="pro">广西壮族自治区</span>:桂粤界--G75兰海高速--山口收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
