--- a/a001.html
+++ b/a001.html
@@ -53,7 +53,7 @@
                 <li data-role="list-divider" class="category-title">基本信息</li> <!-- 基本信息 -->
                 <li>
                     <div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">B4200002023103000069</div>
+                    <div class="detail-value " id="reqNo">B42000020241022300069</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">有效范围：</div>
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod ">通行日期：</div>
-                    <div class="detail-value " id="passDate">2023-10-30至2023-11-05</div>
+                    <div class="detail-value " id="passDate">2024-02-23至2024-02-29</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod ">通行次数：</div>
@@ -70,7 +70,7 @@
                 <li>
                     <div class="detail-name detail-name-blod">通行路线：</div>
                     <div class="detail-value " id="roads">
-                        <br>宜昌起帆电缆有限公司-先锋路-猇亭大道-伍临路-花溪路-三峡大道-宜昌收费站-S58三峡高速-G50沪渝高速-仙桃收费站-S214-中国联合网络通讯有限公司汉江分公司 。 (审 批 路 线 不 含 城 市 道 路 )</div>
+                        <br>浠水县绿色矿山混凝土搅拌站 -S202-兰溪收费站-G45大广高速-G50沪渝高速-庙岭收费站-S257-毛熊村 。 (审 批 路 线 不 含 城 市 道 路 )</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">承运单位：</div>
@@ -85,21 +85,21 @@
                 <li data-role="list-divider" class="category-title">货物信息</li> <!-- 货物信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">电缆</div>
+                    <div class="detail-value " id="cargoInfo">翻斗车</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物重量：</div>
-                    <div class="detail-value " id="cargoWeight">38.00吨</div>
+                    <div class="detail-value " id="cargoWeight">35.00吨</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
-                    <div class="detail-value " id="cargoOutline">10.00 × 3.75 × 3.60</div>
+                    <div class="detail-value " id="cargoOutline">11.00 × 3.70 × 3.60</div>
                 </li>
 
                 <li data-role="list-divider" class="category-title">车辆信息</li> <!-- 车辆信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">牵引车车号牌：</div>
-                    <div class="detail-value" id="vehicleNo">冀EQ1413</div>
+                    <div class="detail-value" id="vehicleNo">冀ET0452</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">牵引车厂牌型号：</div>
@@ -111,7 +111,7 @@
                 </li>
                 <li class="han-veh">
                     <div class="detail-name detail-name-blod">挂车车号牌：</div>
-                    <div class="detail-value" id="hanvehicleNo">冀EKL55挂</div>
+                    <div class="detail-value" id="hanvehicleNo">冀E835N挂</div>
                 </li>
                 <li class="han-veh">
                     <div class="detail-name detail-name-blod">挂车厂牌型号：</div>
@@ -125,11 +125,11 @@
                 <li data-role="list-divider" class="category-title">车货总体信息</li> <!-- 车货总体信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">车货总重量：</div>
-                    <div class="detail-value " id="totalWeight">55.00吨</div>
+                    <div class="detail-value " id="totalWeight">52.00吨</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
-                    <div class="detail-value " id="totalOutline">20.00 × 3.75 × 4.50</div>
+                    <div class="detail-value " id="totalOutline">20.00 × 3.70 × 4.50</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">轴荷分布：</div>
