--- a/017.html
+++ b/017.html
@@ -77,13 +77,13 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
                     <div class="detail-value " id="reqNo">A4400002024030600020</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">广东省，广西壮族自治区</div></li>
+				<div class="detail-value " id="passDists">广东省，湖南省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年03月06日20时39分至 2024年03月15日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年03月07日20时39分至 2024年03月15日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:辉煌工程机械--G207--化湛路--笪桥收费站--S14汕湛高速--林屋立交--G15沈海高速--东坡岭立交--G75兰海高速--粤桂界；<br><hr><span id="pro">广西壮族自治区</span>:桂粤界--G75兰海高速--G7511钦东高速--东兴收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:华科达机械--G359--更合西收费站--S5广台高速--谭塱立交--G94珠三角环线高速--张洞立交--G55二广高速--粤湘界；<br><hr><span id="pro">湖南省</span>:湘粤界--G55二广高速--宁远东收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -112,7 +112,7 @@
                 <li class="han-veh ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">挂车车号牌：</div>
                     <div class="detail-value" id="hanvehicleNo">鲁HJ73D挂</div></li>
                 <li class="han-veh ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">挂车厂牌型号：</div>
-                    <div class="detail-value" id="hanmodel">LWY9402TDP</div></li>
+                    <div class="detail-value" id="hanmodel">LWY9386TDP</div></li>
                 <li class="han-veh ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">挂车整备质量：</div>
                     <div class="detail-value " id="hanvehWeight">8.20吨</div></li>
                 
@@ -131,7 +131,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
-				<div class="detail-value " id="passOpinion"><br>广东省：<br>交通部门意见:同意通行！ <br>公安部门意见:同意通行！<br><hr>广西壮族自治区：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+				<div class="detail-value " id="passOpinion"><br>广东省：<br>交通部门意见:同意通行！ <br>公安部门意见:同意通行！<br><hr>湖南省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
