--- a/017.html
+++ b/017.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:东莞市革力风管制造有限公司--X235--立沙岛收费站--S3广深沿江高速--G0425广澳高速--G4京港澳高速--G15沈海高速--S8广佛肇高速--S59怀郁高速--G80广昆高速--粤桂界；<br><hr><span id="pro">广西壮族自治区</span>:桂粤界--G80广昆高速--G65包茂高速--梧州西收费站
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:众晟智慧园--S256--赤岭收费站--G4京港澳高速--S8广佛肇高速--S59怀郁高速--G80广昆高速--粤桂界；<br><hr><span id="pro">广西壮族自治区</span>:桂粤界--G80广昆高速--G65包茂高速--梧州西收费站
 <br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
@@ -99,7 +99,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
                     <div class="detail-value " id="cargoInfo">履带吊主机</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
-                    <div class="detail-value " id="cargoWeight">52.00吨</div></li>
+                    <div class="detail-value " id="cargoWeight">48.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
                     <div class="detail-value " id="cargoOutline">14.00 × 3.75 ×3.60</div></li>
                     
@@ -119,7 +119,7 @@
                 
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">车货总体信息</li> <!-- 车货总体信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货总重量：</div>
-                    <div class="detail-value " id="totalWeight">69.00吨</div></li>
+                    <div class="detail-value " id="totalWeight">65.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
                     <div class="detail-value " id="totalOutline">24.00 × 3.75× 4.50</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">轴荷分布：</div>
